--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -560,6 +560,7 @@
 
     // ====== CONFIG ======
     const ALLOWED_HOST = "codecrunchglobal.vercel.app";
+    // IMPORTANT: Deploy Google Script as Web App -> Execute as: "Me", Who has access: "Anyone"
     const API_URL = "https://script.google.com/macros/s/AKfycbws4kSTWdEfx9ZyQQQ1ZZzd5KQ3QMj-sSJVThOKzViNKLiD3wix1l8qnYt3i2Z9GXbttw/exec";
     const USE_API_KEY = false;
     const API_KEY = "REPLACE_WITH_SECURE";
