--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -1031,7 +1031,7 @@
         formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeq5MG-EJ0OTVAR3IA2jv99hqHpQexSAJ_LHlDsMbFbM3vcWg/viewform?usp=dialog',
 
         reviewTicketState: true,
-        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html"
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-all-events.html"
       },
       {
         
@@ -1052,7 +1052,7 @@
         formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeq5MG-EJ0OTVAR3IA2jv99hqHpQexSAJ_LHlDsMbFbM3vcWg/viewform?usp=dialog',
 
         reviewTicketState: true,
-        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html"
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-all-events.html"
       },
 
       {
@@ -1069,11 +1069,11 @@
         formNo1State: true,
         formNo1Url: FORM_NO_1_URL,
 
-        formNo2State: false,
-        formNo2Url: '#',
+        formNo2State: true,
+        formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeBrDWH9NkWSPuw9-0VJW-YNsg4PxWqYVu2gLDhbAz3t7o0Gw/viewform?usp=dialog',
 
-        reviewTicketState: false,
-        reviewTicketUrl: VOLUNTEER_PORTAL_URL
+        reviewTicketState: true,
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-all-events.html"
       },
       {
         name: '🤖 305 Hackathon Edition March 2026 - Session B (In-person)',
@@ -1089,11 +1089,11 @@
         formNo1State: true,
         formNo1Url: FORM_NO_1_URL,
 
-        formNo2State: false,
-        formNo2Url: '#',
+        formNo2State: true,
+        formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeBrDWH9NkWSPuw9-0VJW-YNsg4PxWqYVu2gLDhbAz3t7o0Gw/viewform?usp=dialog',
 
-        reviewTicketState: false,
-        reviewTicketUrl: VOLUNTEER_PORTAL_URL
+        reviewTicketState: true,
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-all-events.html"
       },
 
       {
