--- a/hackathonvolunteer-APP-status-all-events.html
+++ b/hackathonvolunteer-APP-status-all-events.html
@@ -587,9 +587,10 @@
     // --- EVENT CONFIGURATION ---
     // Add new events here. The 'id' must match the key in your Google Apps Script 'sheetMap'.
     const EVENTS = [
-      { id: "305_JAN_2026", name: "🏥 305 Hackathon Jan 2026" },
-      { id: "HACK_FIESTA_FEB_2026", name: "🔥 Hack Fiesta Miami Feb 2026" },
-      { id: "CODEFEST_DEC_2025", name: "🎆 CodeFest Dec 2025" }
+      { id: "305_MAR_2026", name: "305 Hackathon Edition - March 2026" },
+      { id: "305_JAN_2026", name: "305 Hackathon Edition - January  2026" },
+      { id: "HACK_FIESTA_FEB_2026", name: "Hack Fiesta Miami Edition - February 2026" },
+      { id: "CODEFEST_DEC_2025", name: "CodeFest Edition - December 2025" }
     ];
 
     // Populate Dropdown
