--- a/hackathonvolunteer-APP-status-all-events.html
+++ b/hackathonvolunteer-APP-status-all-events.html
@@ -582,15 +582,14 @@
 
     const ALLOWED_HOST = "codecrunchglobal.vercel.app";
     // IMPORTANT: Update this URL to your new/updated Google Apps Script deployment
-    const API_URL = "https://script.google.com/macros/s/AKfycbyA6LqselGD0_Dp9QBGmrwbfcCYfDqn1um4aonBy7do9puyqY4e6qeg67ZCHz0LIS9h/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxpn_IZyMvnzIcOxN2xWcMoLBfJi-U3EIshW1VdDB8lVoERJVDb2a83n0oYH6JS7Tg/exec";
 
     // --- EVENT CONFIGURATION ---
     // Add new events here. The 'id' must match the key in your Google Apps Script 'sheetMap'.
     const EVENTS = [
-      { id: "305_MAR_2026", name: "305 Hackathon Edition - March 2026" },
-      { id: "305_JAN_2026", name: "305 Hackathon Edition - January  2026" },
-      { id: "HACK_FIESTA_FEB_2026", name: "Hack Fiesta Miami Edition - February 2026" },
-      { id: "CODEFEST_DEC_2025", name: "CodeFest Edition - December 2025" }
+      { id: "305_JAN_2026", name: "🏥 305 Hackathon Jan 2026" },
+      { id: "HACK_FIESTA_FEB_2026", name: "🔥 Hack Fiesta Miami Feb 2026" },
+      { id: "CODEFEST_DEC_2025", name: "🎆 CodeFest Dec 2025" }
     ];
 
     // Populate Dropdown
@@ -722,8 +721,13 @@
             : "Discord instructions will appear here if included for your event."}
                 </div>
 
-                <!-- HARDCODED TEXT PLACEHOLDER (Empty for future use) -->
+                <!-- HARDCODED TEXT -->
                 <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
+                  Thank you for supporting the hackathon! We look forward to an amazing event together!
+                </div>
+          
+                <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
+                  Questions ? Message us on Linkedin with Ticked ID
                 </div>
               </div>`;
 
