--- a/hackathonvolunteer-APP-status-all-events.html
+++ b/hackathonvolunteer-APP-status-all-events.html
@@ -724,11 +724,12 @@
 
                 <!-- HARDCODED TEXT -->
                 <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
-                  Thank you for supporting the hackathon! We look forward to an amazing event together!
+                  🔥🔥🔥!
                 </div>
           
                 <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
-                  Questions ? Message us on Linkedin with Ticked ID
+                  🔥🔥🔥!
+                </div>
                 </div>
               </div>`;
 
