--- a/hackuniversity-discord.html
+++ b/hackuniversity-discord.html
@@ -183,6 +183,59 @@
       padding: 16px;
       display: none;
     }
+    .result-actions {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .btn-main-tight {
+      margin-top: 0;
+      border-radius: 12px;
+      padding: 10px 12px;
+      min-height: 44px;
+      font-size: .9rem;
+      font-weight: 700;
+      line-height: 1.25;
+      text-align: center;
+      white-space: normal;
+    }
+    .community-box {
+      margin-top: 14px;
+      background: #fff;
+      border: 1px solid #dbe7ff;
+      border-radius: 10px;
+      padding: 12px;
+    }
+    .community-title {
+      margin: 0 0 10px;
+      font-size: 1rem;
+      color: #1f3f7f;
+    }
+    .community-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 8px;
+    }
+    .btn-org {
+      margin-top: 0;
+      border-radius: 10px;
+      padding: 10px 12px;
+      min-height: 44px;
+      font-size: .85rem;
+      font-weight: 700;
+      line-height: 1.2;
+      background: #eef4ff;
+      color: #174ea6;
+      border: 1px solid #c7dafd;
+      text-align: center;
+      white-space: normal;
+    }
+    .btn-org:hover {
+      background: #e3edff;
+      color: #113b83;
+    }
+    .community-full { grid-column: 1 / -1; }
 
     .footer { background: var(--color-primary); color: #fff; padding: 32px 0 48px; margin-top: 24px; }
     .footer-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
@@ -232,6 +285,8 @@
       .nav-link { width: 100%; padding: 10px 12px; }
       .event-clock-bar { top: var(--navbar-h-m); }
       body { padding-top: calc(var(--navbar-h-m) + var(--clock-bar-h)); }
+      .result-actions { grid-template-columns: 1fr; }
+      .community-grid { grid-template-columns: 1fr; }
     }
 
     @media (max-width: 640px) {
@@ -286,19 +341,19 @@
 
       <div id="result" class="result">
         <p>Welcome <strong id="welcome-name">Member</strong>. Your membership is verified and Discord access is ready.</p>
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
-          <a id="discord-link" class="btn btn-main" href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i> Join Hackathon Discord</a>
-          <a id="groupme-link" class="btn btn-main" href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> Join Hackathon GroupMe</a>
+        <div class="result-actions">
+          <a id="discord-link" class="btn btn-main btn-main-tight" href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i> Join Hackathon Discord</a>
+          <a id="groupme-link" class="btn btn-main btn-main-tight" href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> Join Hackathon GroupMe</a>
         </div>
 
-        <div style="margin-top:14px; background:#fff; border:1px solid #dbe7ff; border-radius:10px; padding:12px;">
-          <h3 style="margin:0 0 10px; font-size:1rem; color:#1f3f7f;">🌐 Join Organization-Specific Communities</h3>
-          <div style="display:grid; grid-template-columns:1fr 1fr; gap:8px;">
-            <a class="btn btn-main" style="margin-top:0;" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Code Crunch Global Discord</a>
-            <a class="btn btn-main" style="margin-top:0;" href="https://colorstackatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">ColorStack at FIU Discord</a>
-            <a class="btn btn-main" style="margin-top:0;" href="https://cahsiatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">CAHSI at FIU Discord</a>
-            <a class="btn btn-main" style="margin-top:0;" href="https://gdgatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Google Developer Group (GDG) at FIU Discord</a>
-            <a class="btn btn-main" style="margin-top:0; grid-column:1 / -1;" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Raspberry Pi Code Crunch Discord</a>
+        <div class="community-box">
+          <h3 class="community-title">🌐 Join Organization-Specific Communities</h3>
+          <div class="community-grid">
+            <a class="btn btn-org" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Code Crunch Global Discord</a>
+            <a class="btn btn-org" href="https://colorstackatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">ColorStack at FIU Discord</a>
+            <a class="btn btn-org" href="https://cahsiatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">CAHSI at FIU Discord</a>
+            <a class="btn btn-org" href="https://gdgatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Google Developer Group (GDG) at FIU Discord</a>
+            <a class="btn btn-org community-full" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer">Raspberry Pi Code Crunch Discord</a>
           </div>
         </div>
       </div>
